# NumpyPunksky

./: 1. Introduction  1. Introduction.md  2. Grunnleggende prinsipper.md  3. Numpy for punktskyer.md  4. Ytelse.md  5. Konklusjon.md  PointCloud.py  README.md  alignment.py  main.py  pyproject.toml
